# phyai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  README.md
.github/: CODEOWNERS
benchmark/: bench_n_batch.py  bench_n_batch_ws1_gr00t.py  bench_n_batch_ws1_pi0.py  bench_n_batch_ws1_pi05.py  minicpm_gr00t_random_smoke.py
benchmark/cosmos3_policy/: run.sh
benchmark/gr00t/: accuracy_parity.py
benchmark/pi0/: bench_realtime_vla_pi0.py  compare_pi0_lerobot_live.py  dump_compare_pi0_lerobot.py  hardware_probe.py  model_flops.py  plot_pi0.py  profile_pi0.py  run.sh
docs/: Doxyfile  Makefile  conf.py  docs.json  docs.rst  index.rst  make.bat  phyai_pi05_libero_four_suites_reproduction.md  requirements.txt
examples/: run_cosmos3_policy.py  run_pi05.py  run_walloss05_native_attention_core_parity.py  run_walloss05_native_attention_projection_parity.py  run_walloss05_native_decoder_ffn_parity.py  run_walloss05_native_decoder_layer_parity.py  run_walloss05_native_joint_attention_parity.py  run_walloss_flow.py  run_walloss_flow_predict_dryrun.py
phyai/: pyproject.toml
phyai-model-optimizer/: pyproject.toml
phyai-utils-tools/: pyproject.toml
phyai-utils-tools/src/phyai_utils_tools/models/cosmos3/: __init__.py  processor_cosmos3.py  steps_cosmos3.py
phyai-utils-tools/src/phyai_utils_tools/models/gr00t/: ops_gr00t.py  processor_gr00t.py
phyai-utils-tools/src/phyai_utils_tools/pipeline/: __init__.py  pi05_libero.py  processors.py
phyai-utils-tools/tests/: test_pi05_libero_pipeline.py
tools/: convert_openpi_pi05_to_phyai.py
(+214 files in other folders)
