[project]
name = "phyai-utils-tools"
version = "0.1.0"
description = "phyai — Shared utilities and tools."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "safetensors",
    "torch==2.11",
    "transformers==5.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phyai_utils_tools"]
